# zsi_xo6_autonom

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: traffic_system.launch.py
src/: PROJECT_STRUCTURE.txt  car_node.cpp  traffic_light_node.cpp
